src/test/deca/context/extension/valid/TAB_field_private.deca
class A{
    protected float[][] f;
    protected int[] i;
}

class B extends A{
    protected int[][] ii = new int[5][5];
}