src/test/deca/context/extension/invalid/TAB_field2.deca
class A{
    protected float[][] f;
}

{
    A a = new A();
    a.f;
}